--- a/main.css
+++ b/main.css
@@ -40,7 +40,29 @@
 	width: 1000px;
 	height: 800px;
 	background-color: gray;
+
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
 }
+
+/* Left content Bar*/
+#content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+}
+
+
+
+
+
+
+
+
+/* Navigation Bar*/
 #nav-bar {
 	float: right;
 	display: flex;
