--- a/main.css
+++ b/main.css
@@ -36,6 +36,15 @@
 	--title-font-size: 3em;
 }
 
+body {
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+.borderless {
+    border: none;
+    border-radius: 5px;
+}
+
 #container {
 	width: 1000px;
 	height: 800px;
@@ -47,12 +56,44 @@
     justify-content: space-between;
 }
 
-/* Left content Bar*/
+/* Left Content Bar*/
 #content {
+    flex: 5;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-items: center;
+    justify-content: center;
+}
+
+#player-names {
+}
+
+#logging-ui {
+    align-self: stretch;
+    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#logging-toolbar {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#logging-toolbar > input {
+    margin: 5px;
+    padding: 7px;
+}
+
+#tennis-court {
+    flex: 5;
+    min-width: 100px;
 }
 
 
@@ -64,6 +105,8 @@
 
 /* Navigation Bar*/
 #nav-bar {
+    flex: 1;
+    
 	float: right;
 	display: flex;
 	flex-direction: column;
