--- a/main.css
+++ b/main.css
@@ -39,6 +39,12 @@
 body {
     font-family: Helvetica, Arial, sans-serif;
     overflow: hidden;
+    
+    margin: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .borderless {
@@ -85,7 +91,7 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
 }
 
