--- a/main.css
+++ b/main.css
@@ -34,11 +34,15 @@
 	--header-align-items: stretch;
 	--body-flex-direction: column;
 	--title-font-size: 3em;
+    
+    --color-background: lightgoldenrodyellow;
 }
 
 body {
     font-family: Helvetica, Arial, sans-serif;
     overflow: hidden;
+    
+    background-color: var(--color-background);
     
     margin: 10px;
     display: flex;
@@ -47,20 +51,14 @@ body {
     justify-content: center;
 }
 
-.borderless {
-    border: none;
-    border-radius: 5px;
-}
-
 #container {
 	width: 1000px;
-	height: 800px;
-	background-color: gray;
+	/*height: 800px;*/
 
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
+    align-items: stretch;
+    justify-content: stretch;
 }
 
 /* Left Content Bar*/
@@ -87,27 +85,10 @@ body {
     justify-content: center;
 }
 
-#logging-toolbar {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    justify-content: center;
-}
-
-.toolbar-button {
-    margin: 5px;
-    padding: 7px;
-}
-
-.toolbar-button.active {
-    background-color: #ccc;
-}
-
 
 #tennis-court {
     flex: 5;
-    margin: 5px;
+    margin: 5px 5px 0px;
     min-width: 100px;
 }
 
@@ -165,6 +146,14 @@ body {
 
 
 
+#right-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
 
 /* Navigation Bar*/
 #nav-bar {
@@ -176,53 +165,90 @@ body {
 	align-items: center;
 	width: 200px;
 	height: 100%;
-	background-color: red;
 }
 /* Nav Bar Items Style */
 #nav-bar .menu-item-wrapper {
 	position: relative;
 }
 #nav-bar .menu-item {
-	width: 180px;
-	padding: 30px 0;
-	margin-top: 10px;
-	text-align: center;
-	cursor: pointer;
-	background-color: yellow;
+    width: 180px;
+    padding: 24px 0;
+    margin-top: 10px;
+    text-align: center;
+    cursor: pointer;
+    background-color: #56b0ed;
+    color: #FFF;
+    border-radius: 10px;
+    font-size: 30px;
 }
 #nav-bar .menu-item:hover {
-	/* Change color or something here. */
+	background-color: #2ba3ed;
 }
+
+
+#logging-toolbar {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
+}
+
+.toolbar-button {
+    padding: 12px;
+    box-shadow: none;
+    border-color: #ccc;
+    font-size: 20px;
+    color: white;
+    background-color: #367DB1;
+}
+.toolbar-button:first-child {
+    border-radius: 10px 10px 0 0;
+}
+.toolbar-button:last-child {
+    border-radius: 0 0 10px 10px;
+}
+
+.toolbar-button.active {
+    background-color: #aaa;
+}
+
+
+
+
+
 /* Menu Popups Style */
 #nav-bar .menu-popup, #nav-bar .menu-subpopup {
 	position: absolute;
 	top: 10px;
 	right: 200px;
-	width: 300px;
 	height: auto;
 	background-color: white;
 	display: none;
+    border-radius: 10px;
 }
 #menu-menu .menu-popup .menu-popup-container, #menu-menu .menu-subpopup .menu-popup-container {
 	/* Add specific style for Menu popup here. */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding-bottom: 10px;
+	padding: 20px;
+    border-radius: 10px;
 }
 #menu-menu .menu-popup .menu-item {
-	width: 280px;
+	width: 260px;
 	padding: 30px 0;
-	margin-top: 10px;
-	text-align: center;
-	cursor: pointer;
-	background-color: yellow;
+	margin: 10px;
+    text-align: center;
+    cursor: pointer;
+    background-color: #56b0ed;
+    color: #FFF;
+    border-radius: 10px;
+    font-size: 30px;
 }
 #current-matches .menu-subpopup {
 	/* Add specific style for Current Matches popup here. */
 	top: 0;
 	right: 310px;
-	width: 200px;
 }
 #current-matches .menu-subpopup .menu-item {
 	width: 180px;
@@ -233,16 +259,24 @@ body {
 	position: absolute;
 	top: 10px;
 	right: 200px;
-	width: 400px;
 	height: 600px;
 	background-color: white;
 	display: none;
+    padding: 20px;
 }
 #menu-score .menu-popup {
 	/* Add specific style for Menu popup here. */
+    padding: 20px;
+}
+#menu-score .score_num p {
+    font-size: 30px;
 }
 #menu-undo .menu-popup {
 	/* Add specific style for Menu popup here. */
+}
+#feedback_menu_popup {
+    right: 290px !important;
+    padding: 20px;
 }
 
 @keyframes anim-move {
@@ -267,41 +301,33 @@ body {
 	flex-direction: row;
 	justify-content: space-around;
 	align-items: center;
-
-
-	border-color: grey;
-	border-style: solid;
-	border-width: 0.01in;
 }
 
 #swap_btn{
-
-	width: 20%;
-
-	border-radius: 5%;
+    width: 100px;
+    height: 100px;
+	border-radius: 50%;
 	color: #000000;
 	font-size: var(--font-size);
 	background: #e0e0e0;
 	padding: 5% 5% 5% 5%;
 	text-decoration: none;
+    border: none;
+    cursor: pointer;
 }
 #swap_btn:hover {
-	background: black;
+	background: #ddd;
 	text-decoration: none;
   }
 
 .player_label{
 	font-family: Arial;
 	font-size: xx-large;
-
-	border-color: grey;
-	border-style: dotted;
-	border-width: 0.01in;
 }
 
 #swap_icon{
-	width: 50%;
-	height: 50%;
+	width: 100%;
+	height: 100%;
 }
 
 /*-----------------------Score Pop-up Menu ----------------------------*/
@@ -316,11 +342,6 @@ body {
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
-
-
-	border-color: grey;
-	border-style: solid;
-	border-width: 0.01in;
 }
 
 .set_score_box{
@@ -333,10 +354,6 @@ body {
 .set_score_displayed{
 	font-family: Arial;
 	font-size: 1in;
-
-	border-color: grey;
-	border-style: solid;
-	border-width: 0.01in;
 }
 
 .score_player_label{
@@ -347,10 +364,6 @@ body {
 }
 
 .score_controller_container{
-	border-color: grey;
-	border-style: solid;
-	border-width: 0.01in;
-
 	width:100px;
 	height: 100px;
 
@@ -368,9 +381,7 @@ body {
 
 .score_num{
 	/*
-	border-color: grey;
-	border-style: solid;
-	border-width: 0.01in;*/
+*/
 
 	width: 50%;
 	height: 100%;
@@ -388,7 +399,7 @@ body {
 .stats_menu_container{
 	display: flex;
 	flex-direction: column;
-	/*width: 250px;*/
+
 }
 
 .stats_menu_header_container{
@@ -401,9 +412,6 @@ body {
 	font-size: 0.5in;
 
 	text-align: center;
-	border-color: grey;
-	border-style: solid;
-	border-width: 0.01in;
 }
 
 .stats_menu_table_container{
@@ -413,10 +421,6 @@ body {
 
 	font-family: Arial;
 	font-size: 0.2in;
-
-	border-color: grey;
-	border-style: solid;
-	border-width: 0.01in;
 }
 
 .stats_menu_table_row{
@@ -442,9 +446,6 @@ body {
 	font-family: Arial;
 	font-size: 1in;
 
-	border-color: grey;
-	border-style: solid;
-	border-width: 0.01in;
 
 	height: 1in;
 }
@@ -473,16 +474,13 @@ body {
 	text-decoration: none;
 }
 
-.feedback_menu_container{
-	width: 300px;
+.feedback_menu_container {
 	display: flex;
 	flex-direction: column;
 	justify-content: stretch;
 	align-items: center;
 
-	border-color: grey;
-	border-style: solid;
-	border-width: 0.01in;
+
 
 }
 
