--- a/main.css
+++ b/main.css
@@ -34,16 +34,16 @@
 	--header-align-items: stretch;
 	--body-flex-direction: column;
 	--title-font-size: 3em;
-    
-    --color-background: lightgoldenrodyellow;
+
+  --color-background: #f8a298;
 }
 
 body {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Open Sans', Arial, sans-serif;
     overflow: hidden;
-    
+
     background-color: var(--color-background);
-    
+
     margin: 10px;
     display: flex;
     flex-direction: row;
@@ -90,6 +90,7 @@ body {
     flex: 5;
     margin: 5px 5px 0px;
     min-width: 100px;
+		opacity: 0.85;
 }
 
 #tennis-player {
@@ -149,7 +150,7 @@ body {
 #right-column {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
 }
 
@@ -171,18 +172,19 @@ body {
 	position: relative;
 }
 #nav-bar .menu-item {
-    width: 180px;
-    padding: 24px 0;
+    width: 140px;
+    padding: 14px 20px;
     margin-top: 10px;
-    text-align: center;
+    text-align: left;
     cursor: pointer;
-    background-color: #56b0ed;
-    color: #FFF;
-    border-radius: 10px;
-    font-size: 30px;
+    background-color: #FFF;
+    color: #666;
+		border: 1px solid #dddfe2;
+    border-radius: 6px;
+    font-size: 24px;
 }
 #nav-bar .menu-item:hover {
-	background-color: #2ba3ed;
+	background-color: #dddfe2;
 }
 
 
@@ -191,6 +193,7 @@ body {
     flex-direction: column;
     align-items: stretch;
     justify-content: center;
+		padding-left: 10px;
 }
 
 .toolbar-button {
@@ -198,14 +201,15 @@ body {
     box-shadow: none;
     border-color: #ccc;
     font-size: 20px;
-    color: white;
-    background-color: #367DB1;
+    color: #666;
+    background-color: #FFF;
+		text-align: left;
 }
 .toolbar-button:first-child {
-    border-radius: 10px 10px 0 0;
+    border-radius: 6px 6px 0 0;
 }
 .toolbar-button:last-child {
-    border-radius: 0 0 10px 10px;
+    border-radius: 0 0 6px 6px;
 }
 
 .toolbar-button.active {
@@ -308,14 +312,14 @@ body {
 }
 
 #swap_btn{
-    width: 100px;
-    height: 100px;
-	border-radius: 50%;
-	color: #000000;
-	font-size: var(--font-size);
-	background: #e0e0e0;
-	padding: 5% 5% 5% 5%;
-	text-decoration: none;
+    width: 60px;
+    height: 60px;
+		border-radius: 50%;
+		color: #000000;
+		font-size: var(--font-size);
+		background: #FFF;
+		padding: 10px;
+		text-decoration: none;
     border: none;
     cursor: pointer;
 }
@@ -325,7 +329,8 @@ body {
   }
 
 .player_label{
-	font-family: Arial;
+	width: 40%;
+	text-align: center;
 	font-size: xx-large;
 }
 
