--- a/main.css
+++ b/main.css
@@ -1,60 +1,92 @@
 /* Global variables */
 :root {
-	--color-light-gray: hsl(220, 10%, 85%);
+	--color-top-bar: #333;
+	--color-top-bar-popup: #444;
+	--color-top-bar-dropdown: #555;
+  --color-background: #f0f0f0;
+	--color-stats-background: #FFF;
+	--color-stats-feedback-background: #FFF;
 
-	/* original candy colors */
-	--color-red: hsl(0, 80%, 48%);
-	--color-yellow: gold;
-	--color-green: hsl(85, 90%, 37%);
-	--color-orange: hsl(30, 100%, 50%);
-	--color-blue: hsl(210, 80%, 45%);
-	--color-purple: purple;
-
-	/* custom variants */
-	--color-disabled-gray: hsl(222, 10%, 75%);
-	--color-disabled-text-gray: hsl(220, 4%, 53%);
-	--color-score-gray: hsl(218, 11%, 85%);
-	--color-gray-darker: hsl(222, 10%, 60%);
-
-	--color-invalid-red: hsl(0, 80%, 64%);
-
-	--color-control-green: hsl(85, 90%, 37%);
-	--color-control-green-darker: hsl(85, 90%, 22%);
-
-	--color-header-blue: hsl(212, 72%, 47%);
-	--color-header-blue-darker: hsl(212, 72%, 32%);
-	--color-header-purple: hsl(300, 98%, 25%);
-	--color-header-purple-darker: hsl(300, 98%, 15%);
-
-	--duration-move: .1s; /* Duration to move by 1 cell */ /* .1s default */
-	--duration-fade: .4s; /* .4s default */
-
-	--board-size: calc(400vw / 6);
-	--header-flex-direction: column;
-	--header-align-items: stretch;
-	--body-flex-direction: column;
-	--title-font-size: 3em;
-
-  --color-background: #f8a298;
 	--top-bar-height: 60px;
+	--top-bar-options-width: 200px;
+	--top-bar-options-pad: 15px;
+	--top-bar-popup-width: 220px;
+	--top-bar-popup-pad: 20px;
+	--top-bar-dropdown-pad: 40px;
+	--top-bar-font-large: 24px;
+	--top-bar-font-normal: 20px;
+	--top-bar-font-small: 18px;
+	--top-bar-font-color: #FFF;
+	--top-bar-font-color-hover: #DDD;
+	--top-bar-popup-radius: 6px;
+
+	--container-width: 1000px;
+	--container-margin: 10px;
+	--button-radius-normal: 6px;
+
+	--player-names-button-size: 60px;
+	--player-names-button-pad: 10px;
+	--player-names-button-background: #FFF;
+	--player-names-button-background-hover: #DDD;
+	--player-names-label-width: 40%;
+
+	--tennis-court-flex: 5;
+	--tennis-court-margin: 5px;
+	--tennis-court-min-width: 100px;
+	--tennis-court-opacity: 0.85;
+	--tennis-player-width: 100px;
+	--tennis-ball-width: 20px;
+
+	--score-board-width: 200px;
+	--score-board-height: 200px;
+	--score-board-radius: 6px;
+	--score-board-border: 1px solid #666;
+	--score-board-font-large: 24px;
+	--score-board-font-normal: 20px;
+	--score-board-input-border: 1px solid #444;
+	--score-board-input-background: #FFF;
+	--score-board-input-width: 65px;
+	--score-board-button-size: 25px;
+	--score-board-button-color: 25px;
+	--score-board-button-font-color: #FFF;
+	--score-board-button-color: #444;
+	--score-board-button-color-hover: #333;
+
+	--player-names-label-font: xx-large;
+	--right-column-margin-left: 20px;
+	--toolbar-button-pad: 12px;
+	--toolbar-button-font: 20px;
+	--toolbar-button-font-color: #666;
+	--toolbar-button-background: #FFF;
+	--toolbar-button-border: 1px solid #CCC;
+	--toolbar-button-background-active: #3D94F6;
+	--toolbar-button-font-color-active: #FFF;
+	--undo-button-margin-top: 10px;
+	--undo-button-background: #dc3545;
+	--undo-button-font-color: 20px;
+	--undo-button-font-color: #FFF;
+	--undo-button-pad: 10px;
+
+	--stats-width: 900px;
 }
 
 body {
-    font-family: 'Open Sans', Arial, sans-serif;
-		background-color: #f0f0f0;
-		margin: 0;
+  font-family: 'Open Sans', Arial, sans-serif;
+	background-color: var(--color-background);
+	margin: 0;
 }
 
 #container {
-		width: 1000px;
-		min-height: calc(100vh - var(--top-bar-height) - 10px);
-		margin: auto;
-		padding-top: calc(var(--top-bar-height) + 10px);
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		justify-content: center;
+	width: var(--container-width);
+	min-height: calc(100vh - var(--top-bar-height) - var(--container-margin));
+	margin: auto;
+	padding-top: calc(var(--top-bar-height) + var(--container-margin));
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
 }
+
 
 /* Top Bar Style */
 #topbar {
@@ -64,312 +96,112 @@ body {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	background-color: #333;
-	z-index: 1;
+	background-color: var(--color-top-bar);
+	z-index: 999;
 }
+
 #topbar-logo {
-	width: 800px;
+	width: calc(var(--container-width) - var(--top-bar-options-width));
 	display: flex;
 	align-items: center;
-	color: #FFF;
-	font-size: 24px;
+	color: var(--top-bar-font-color);
+	font-size: var(--top-bar-font-large);
 }
+
 #topbar-options {
-	width: 200px;
+	width: var(--top-bar-options-width);
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-end;
 }
-#topbar .menu-item-wrapper {
+
+#topbar-options .menu-item-wrapper {
 	position: relative;
 }
-#topbar .menu-item {
+
+#topbar-options .menu-item {
 	height: var(--top-bar-height);
-	padding: 0 15px;
-	color: #FFF;
+	padding: 0 var(--top-bar-options-pad);
 	display: flex;
 	align-items: center;
-	font-size: 20px;
+	color: var(--top-bar-font-color);
+	font-size: var(--top-bar-font-normal);
 	cursor: pointer;
 }
-#topbar .menu-item:hover {
-	color: #DDD;
+#topbar-options .menu-item:hover {
+	color: var(--top-bar-font-color-hover);
 }
-#topbar .menu-item > img {
+#topbar-options .menu-item > img {
 	height: 50%;
 }
-#topbar .menu-popup {
+
+
+/* Top Bar Popup & Dropdown Style */
+#topbar-options .menu-popup {
 	height: auto;
 	position: absolute;
 	top: var(--top-bar-height);
 	right: 0;
-	border-radius: 0 0 6px 6px;
-	background-color: #444;
+	border-radius: 0 0 var(--top-bar-popup-radius) var(--top-bar-popup-radius);
+	background-color: var(--color-top-bar-popup);
 	text-align: left;
 	display: none;
 }
+
 #menu-menu .menu-popup .menu-popup-container {
 	display: flex;
 	flex-direction: column;
-	width: 220px;
+	width: var(--top-bar-popup-width);
 }
+
 #menu-menu .menu-popup .menu-item {
-	width: 180px;
-	padding: 0 20px;
+	width: calc(var(--top-bar-popup-width) - 2 * var(--top-bar-popup-pad));
+	padding: 0 var(--top-bar-popup-pad);
+	color: var(--top-bar-font-color);
+	font-size: var(--top-bar-font-small);
 	text-align: left;
-	font-size: 18px;
 	cursor: pointer;
-  color: #FFF;
 }
 #menu-menu .menu-popup .menu-item:last-child {
-	border-radius: 0 0 6px 6px;
+	border-radius: 0 0 var(--top-bar-popup-radius) var(--top-bar-popup-radius);
 }
 #menu-menu .menu-popup .menu-item:hover {
-	background-color: #333;
+	background-color: var(--color-top-bar);
 }
+
 #menu-menu .menu-dropdown .menu-item {
-	width: 140px;
-	padding: 0 40px;
+	width: calc(var(--top-bar-popup-width) - 2 * var(--top-bar-dropdown-pad));
+	padding: 0 var(--top-bar-dropdown-pad);
+	background-color: var(--color-top-bar-dropdown);
+	font-size: var(--top-bar-font-small);
 	text-align: left;
-	font-size: 18px;
 	cursor: pointer;
-	background-color: #555;
 }
 #menu-menu .menu-dropdown .menu-item:last-child {
 	border-radius: 0;
 }
 #menu-menu .menu-dropdown .menu-item:hover {
-	background-color: #444;
+	background-color: var(--color-top-bar);
 }
-#menu-popup-stats {
-	position: absolute;
-	top: calc(var(--top-bar-height) + 10px);
-	/* right: calc((100vw - 1000px)/2); */
-	right: 0;
-	width: 900px;
-	height: auto;
-	background-color: white;
-	display: none;
-}
-#menu-popup-stats .menu-subpopup {
-	position: absolute;
-	top: 10px;
-	right: 200px;
-	height: auto;
-	background-color: white;
-	display: none;
-  border-radius: 20px;
-}
+/* (...Top Bar Popup & Dropdown Style) */
+/* (...Top Bar Style) */
+
 
 /* Left Content Bar*/
 #content {
-    flex: 5;
-
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    justify-content: center;
+  display: flex;
+	flex: 5;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
 }
 
+
+/* Players Names Header Style */
 #player-names {
 	display: flex;
 	flex-direction: column;
 }
-
-#logging-ui {
-    align-self: stretch;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
-
-#tennis-court {
-    flex: 5;
-    margin: 5px 5px 0px;
-    min-width: 100px;
-		opacity: 0.85;
-}
-
-#tennis-player {
-    position: absolute;
-    width: 100px;
-    z-score: 1;
-    top: 0;
-    left: 0;
-    transform: translate(-50%, -50%);
-}
-
-#tennis-player.hidden {
-    display: none;
-}
-
-#tennis-player-red {
-    position: absolute;
-    width: 100px;
-    z-score: 1;
-    top: 0;
-    left: 0;
-    transform: translate(-50%, -50%);
-}
-
-#tennis-player-red.hidden {
-    display: none;
-}
-
-#tennis-ball {
-    position: absolute;
-    width: 20px;
-    z-score: 1;
-    top: 0;
-    left: 0;
-    transform: translate(-50%, -50%);
-}
-
-#tennis-ball.hidden {
-    display: none;
-}
-
-#tennis-ball-red {
-    position: absolute;
-    width: 20px;
-    z-score: 1;
-    top: 0;
-    left: 0;
-    transform: translate(-50%, -50%);
-}
-
-#tennis-ball-red.hidden {
-    display: none;
-}
-
-
-
-#right-column {
-		min-height: calc(100vh - var(--top-bar-height) - 10px);
-		margin-left: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-around;
-}
-
-
-
-/* Navigation Bar*/
-#nav-bar {
-    flex: 1;
-
-	float: right;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 200px;
-	height: 100%;
-}
-/* Nav Bar Items Style */
-#nav-bar .menu-item-wrapper {
-	position: relative;
-}
-#nav-bar .menu-item {
-    width: 140px;
-    padding: 14px 20px;
-    margin-top: 10px;
-    text-align: left;
-    cursor: pointer;
-    background-color: #FFF;
-    color: #666;
-		border: 1px solid #dddfe2;
-    border-radius: 6px;
-    font-size: 24px;
-}
-#nav-bar .menu-item:hover {
-	background-color: #dddfe2;
-}
-#menu-undo {
-	margin-top: 10px;
-	background-color: #dc3545;
-	font-size: 20px;
-	color: #FFF;
-	padding: 10px 0;
-	border-radius: 6px;
-	text-align: center;
-	cursor: pointer;
-}
-
-
-#logging-toolbar {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    justify-content: center;
-}
-
-.toolbar-button {
-    padding: 12px;
-    box-shadow: none;
-    border-color: #ccc;
-    font-size: 20px;
-    color: #666;
-    background-color: #FFF;
-		text-align: left;
-}
-.toolbar-button:first-child {
-    border-radius: 6px 6px 0 0;
-}
-.toolbar-button:last-child {
-    border-radius: 0 0 6px 6px;
-}
-
-.toolbar-button.active {
-    background-color: #3D94F6;
-		color: #FFF;
-}
-
-
-
-
-
-/* Menu Popups Style */
-#nav-bar .menu-popup, #nav-bar .menu-subpopup {
-	position: absolute;
-	top: 10px;
-	right: 200px;
-	height: auto;
-	background-color: white;
-	display: none;
-    border-radius: 20px;
-}
-#menu-score .menu-popup {
-	/* Add specific style for Menu popup here. */
-    padding: 20px;
-}
-#menu-score .score_num p {
-    font-size: 30px;
-}
-#feedback_menu_popup {
-    right: 290px !important;
-    padding: 20px;
-}
-
-@keyframes anim-move {
-    0% {
-        opacity: var(--init-opacity);
-        transform: translate(var(--init-dX), var(--init-dY));
-        z-index: var(--move-z-index);
-    }
-
-    100% {
-        opacity: 1;
-        z-index: var(--move-z-index);
-    }
-}
-
-
-
-/*-----------------------Players Names Top Header ----------------------------*/
 
 .names_header{
 	display: flex;
@@ -379,26 +211,18 @@ body {
 }
 
 #swap_btn{
-    width: 60px;
-    height: 60px;
-		border-radius: 6px;
-		color: #000000;
-		font-size: var(--font-size);
-		background: #FFF;
-		padding: 10px;
-		text-decoration: none;
-    border: none;
-    cursor: pointer;
+  width: var(--player-names-button-size);
+  height: var(--player-names-button-size);
+	padding: var(--player-names-button-pad);
+	border: none;
+	border-radius: var(--button-radius-normal);
+	background-color: var(--player-names-button-background);
+	text-decoration: none;
+  cursor: pointer;
 }
 #swap_btn:hover {
-	background: #ddd;
+	background: var(--player-names-button-background-hover);
 	text-decoration: none;
-  }
-
-.player_label{
-	width: 40%;
-	text-align: center;
-	font-size: xx-large;
 }
 
 #swap_icon{
@@ -406,76 +230,227 @@ body {
 	height: 100%;
 }
 
-/*-----------------------Score Pop-up Menu ----------------------------*/
-.score_menu_container{
+.player_label{
+	width: var(--player-names-label-width);
+	text-align: center;
+	font-size: var(--player-names-label-font);
+}
+/* (...Players Names Header Style) */
+
+
+/* Tennis Court UI Style */
+#logging-ui {
+  align-self: stretch;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#tennis-court {
+  flex: var(--tennis-court-flex);
+  margin: var(--tennis-court-margin) var(--tennis-court-margin) 0px;
+  min-width: var(--tennis-court-min-width);
+	opacity: var(--tennis-court-opacity);
+}
+
+#tennis-player {
+	width: var(--tennis-player-width);
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%);
+	z-index: 1;
+}
+
+#tennis-player.hidden {
+  display: none;
+}
+
+#tennis-player-red {
+  width: var(--tennis-player-width);
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%);
+	z-index: 1;
+}
+
+#tennis-player-red.hidden {
+  display: none;
+}
+
+#tennis-ball {
+  width: var(--tennis-ball-width);
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%);
+	z-index: 1;
+}
+
+#tennis-ball.hidden {
+  display: none;
+}
+
+#tennis-ball-red {
+	width: var(--tennis-ball-width);
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%);
+	z-index: 1;
+}
+
+#tennis-ball-red.hidden {
+  display: none;
+}
+
+
+/* Right Column Style */
+#right-column {
+	min-height: calc(100vh - var(--top-bar-height) - var(--container-margin));
+	margin-left: var(--right-column-margin-left);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+
+
+/* Scores Style */
+.score_menu_container {
+	width: var(--score-board-width);
+	height: var(--score-board-height);
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
-	width: 200px;
-	height: 200px;
-	border: 1px solid #666;
-	border-radius: 6px;
+	border: var(--score-board-border);
+	border-radius: var(--score-board-radius);
 }
 
-.score_column_container{
+.score_column_container {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
 }
 
-.set_score_box{
+.set_score_box {
+	width: 100%;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
-	width: 100%;
 }
 
-.set_score_displayed{
-	font-size: 24px;;
+.set_score_displayed {
+	font-size: var(--score-board-font-large);
 }
 
-.score_player_label{
-	font-size: 20px;
+.score_player_label {
+	font-size: var(--score-board-font-normal);
 }
 
-.score_controller_container{
+.score_controller_container {
 	display: flex;
 	flex-direction: row;
-	border: 1px solid #444;
+	border: var(--score-board-input-border);
 }
 
 .score_inc_btn, .score_dec_btn {
-	width: 25px;
-  height: 25px;
+	width: var(--score-board-button-size);
+  height: var(--score-board-button-size);
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 24px;
-  color: #FFF;
-	background-color: #444;
+	background-color: var(--score-board-button-color);
+  font-size: var(--score-board-font-large);
+  color: var(--score-board-button-font-color);
 	cursor: pointer;
 }
-
 .score_inc_btn:hover, .score_dec_btn:hover {
-	background-color: #333;
+	background-color: var(--score-board-button-color-hover);
 }
-
 .score_inc_btn {
 	border-bottom: solid 1px #FFF;
 }
 
 .score_num{
-	width: 40px;
-	height: 50px;
+	width: calc(var(--score-board-input-width) - var(--score-board-button-size));
+	height: calc(2 * var(--score-board-button-size));
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	font-size: 20px;
-	background-color: #FFF;
+	font-size: var(--score-board-font-normal);
+	background-color: var(--score-board-input-background);
+}
+/* (...Scores Style) */
+
+
+/* Logging Toolbar Style */
+#logging-toolbar {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
 }
 
-/*-----------------------Score Pop-up Menu ----------------------------*/
+.toolbar-button {
+    padding: var(--toolbar-button-pad);
+		background-color: var(--toolbar-button-background);
+		border: var(--toolbar-button-border);
+		box-shadow: none;
+    color: var(--toolbar-button-font-color);
+    font-size: var(--toolbar-button-font);
+		text-align: left;
+}
+.toolbar-button:first-child {
+    border-radius: var(--button-radius-normal) var(--button-radius-normal) 0 0;
+}
+.toolbar-button:last-child {
+    border-radius: 0 0 var(--button-radius-normal) var(--button-radius-normal);
+}
+.toolbar-button.active {
+    background-color: var(--toolbar-button-background-active);
+		color: var(--toolbar-button-font-color-active);
+}
+
+#menu-undo {
+	margin-top: var(--undo-button-margin-top);
+	background-color: var(--undo-button-background);
+	font-size: var(--undo-button-font);
+	color: var(--undo-button-font-color);
+	padding: var(--undo-button-pad) 0;
+	border-radius: var(--button-radius-normal);
+	text-align: center;
+	cursor: pointer;
+}
+/* (...Logging Toolbar Style) */
+/* (...Right Column Style) */
+
+
+/* Stats Popups Style */
+/* TODO: Style Stats and Feedback consistent with other parts */
+#menu-popup-stats { /* TODO: fix position */
+	width: var(--stats-width);
+	height: auto;
+	position: absolute;
+	top: calc(var(--top-bar-height) + 10px);
+	right: 0; /* right: calc((100vw - 1000px)/2); */
+	background-color: var(--color-stats-background);
+	display: none;
+}
+
+#menu-popup-stats .menu-subpopup { /* TODO: fix position */
+	height: auto;
+	position: absolute;
+	top: 10px;
+	right: 200px;
+	background-color: var(--color-stats-feedback-background);
+	display: none;
+  border-radius: 20px;
+}
+
 .stats_menu_container{
 	display: flex;
 	flex-direction: column;
@@ -484,7 +459,6 @@ body {
 
 .court_stats_icon{
 	max-width: 6in;
-
 	height: 100%;
 }
 
@@ -493,10 +467,7 @@ body {
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
-
-	font-family: Arial;
 	font-size: 0.5in;
-
 	text-align: center;
 }
 
@@ -511,7 +482,6 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	position:relative;
-	font-family: Arial;
 	font-size: 0.2in;
 }
 
@@ -539,7 +509,6 @@ body {
 .stats_icon{
 	width: 0.8in;
 	height: 0.8in;
-
 }
 
 .stats_menu_feedback_container{
@@ -547,30 +516,21 @@ body {
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
-
-	font-family: Arial;
 	font-size: 1in;
-
-
 	height: 1in;
 }
 
 #stats_menu_btn {
-
 	border-radius: 20px;
 	color: #FFFFFF;
-	font-family: Arial;
 	font-size: large;
 	font-weight: 100;
-
 	background-color: #3D94F6;
-
 	border: solid #337FED 1px;
 	text-decoration: none;
 	display: inline-block;
 	cursor: pointer;
 	margin: 5px;
-
 	height: 80%;
 }
 
@@ -579,26 +539,24 @@ body {
 	text-decoration: none;
 }
 
+#feedback_menu_popup {
+    right: 290px !important;
+    padding: 20px;
+}
+
 .feedback_menu_container {
 	display: flex;
 	flex-direction: column;
 	justify-content: stretch;
 	align-items: center;
-
-
-
 }
 
 .feedback_menu_header_container{
-
-	font-family: Arial;
 	font-size: large;
 	font-weight: 100;
 }
 
 .feedback_comment_box_container{
-
-
 	display: flex;
 	flex-direction: column;
 	justify-content: stretch;
@@ -613,24 +571,20 @@ body {
 }
 
 .feedback_btn {
-
 	border-radius: 20px;
 	color: #FFFFFF;
-	font-family: Arial;
 	font-size: large;
 	font-weight: 100;
-
 	background-color: #3D94F6;
-
 	border: solid #337FED 1px;
 	text-decoration: none;
 	display: inline-block;
 	cursor: pointer;
 	margin: 5px;
-
 }
 
 .feedback_btn:hover {
 	background: #000000;
 	text-decoration: none;
 }
+/* (...Stats Popups Style) */
