--- a/main.css
+++ b/main.css
@@ -97,6 +97,30 @@
 	--player-feedback-viewer-width: 800px;
 	--player-feedback-font-small: 15px;
 	--player-feedback-font-color-light: #666;
+
+	--login-container-width: 370px;
+	--login-container-height: 460px;
+	--login-container-pad: 48px 40px 36px 40px;
+	--login-container-background: #FFF;
+	--login-container-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+	--login-logo-font-size: 20px;
+	--login-logo-margin-bottom: 42px;
+	--login-title-font-size: 24px;
+	--login-title-margin-bottom: 60px;
+	--login-type-font-size: 16px;
+	--login-type-margin-bottom: 30px;
+	--login-text-font-size: 16px;
+	--login-text-margin-bottom: 30px;
+	--login-text-border-bottom: solid 1px #DDD;
+	--login-text-border-bottom-focus: solid 2px #3D94F6;
+	--login-button-margin-top: 20px;
+	--login-button-color: #3D94F6;
+	--login-button-font-color: #FFF;
+	--login-button-pad: 8px;
+	--login-button-width: 60px;
+	--login-button-border: 1px solid #3D94F6;
+	--login-button-border-radius: 4px;
+	--login-button-color-hover: #007bff;
 }
 
 body {
@@ -129,7 +153,7 @@ body {
 	background-color: var(--color-top-bar);
 }
 #topbar {
-	z-index: 999;
+	z-index: 200;
 }
 #player-view-topbar {
 	z-index: 100;
@@ -601,3 +625,73 @@ body {
 	margin-bottom: var(--stats-table-margin);
 }
 /* (...Additional Style for Player View) */
+
+
+/* Log In View Style */
+#login-view {
+	width: 100vw;
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: var(--color-background);
+	z-index: 999;
+}
+
+#login-container {
+	width: var(--login-container-width);
+	height: var(--login-container-height);
+	padding: var(--login-container-pad);
+	display: flex;
+	flex-direction: column;
+	background-color: var(--login-container-background);
+	border: none;
+	box-shadow: var(--login-container-shadow);
+}
+
+
+#login-logo {
+	margin-bottom: var(--login-logo-margin-bottom);
+	font-size: var(--login-logo-font-size);
+}
+
+#login-title {
+	margin-bottom: var(--login-title-margin-bottom);
+	font-size: var(--login-title-font-size);
+}
+
+#login-type {
+	margin-bottom: var(--login-type-margin-bottom);
+	font-size: var(--login-type-font-size);
+}
+
+#login-username, #login-password {
+	margin-bottom: var(--login-text-margin-bottom);
+	border: none;
+	border-bottom: var(--login-text-border-bottom);
+	font-size: var(--login-text-font-size);
+}
+#login-username:focus, #login-password:focus {
+  outline-width: 0;
+	border-bottom: var(--login-text-border-bottom-focus);
+}
+
+#login-button {
+	width: var(--login-button-width);
+	margin-left: auto;
+	margin-top: var(--login-button-margin-top);
+  padding: var(--login-button-pad);
+	border-radius: var(--login-button-border-radius);
+	border: var(--login-button-border);
+  background-color: var(--login-button-color);
+  color: var(--login-button-font-color);
+	text-align: center;
+	cursor: pointer;
+}
+#login-button:hover {
+	background-color: var(--login-button-color-hover);
+}
+/* (...Log In View Style) */
