--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@
 	--score-board-input-border: 1px solid #444;
 	--score-board-input-radius: 2px;
 	--score-board-input-background: #FFF;
-	--score-board-input-width: 65px;
+	--score-board-input-width: 70px;
 	--score-board-button-size: 25px;
 	--score-board-button-color: 25px;
 	--score-board-button-font-color: #FFF;
@@ -379,16 +379,23 @@ body {
 
 /* Scores Style */
 .score_menu_container {
-	width: var(--score-board-width);
-	height: var(--score-board-height);
+	min-width: var(--score-board-width);
+	min-height: var(--score-board-height);
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: space-evenly;
+    align-items: stretch;
 	border: var(--score-board-border);
 	border-radius: var(--score-board-radius);
 }
 
 .score_column_container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+}
+
+.score_column {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
@@ -411,15 +418,16 @@ body {
 }
 
 .score_controller_container {
+    margin-top: 5px;
 	display: flex;
 	flex-direction: row;
 	border: var(--score-board-input-border);
 	border-radius: var(--score-board-input-radius);
 }
 
-.score_inc_btn, .score_dec_btn {
+.score_inc_btn {
 	width: var(--score-board-button-size);
-  height: var(--score-board-button-size);
+  height: calc(2 * var(--score-board-button-size));
   display: flex;
   align-items: center;
   justify-content: center;
@@ -428,11 +436,8 @@ body {
   color: var(--score-board-button-font-color);
 	cursor: pointer;
 }
-.score_inc_btn:hover, .score_dec_btn:hover {
+.score_inc_btn:hover, hover {
 	background-color: var(--score-board-button-color-hover);
-}
-.score_inc_btn {
-	border-bottom: solid 1px #FFF;
 }
 
 .score_num{
@@ -444,6 +449,21 @@ body {
 	font-size: var(--score-board-font-normal);
 	background-color: var(--score-board-input-background);
 }
+
+#score_undo {
+    align-self: center;
+    min-width: 40%;
+	margin-top: var(--undo-button-margin-top);
+    margin-bottom: var(--undo-button-margin-top);
+	background-color: var(--undo-button-background);
+	font-size: var(--undo-button-font);
+	color: var(--undo-button-font-color);
+	padding: var(--undo-button-pad);
+	border-radius: var(--button-radius-normal);
+	text-align: center;
+	cursor: pointer;
+}
+
 /* (...Scores Style) */
 
 
