added UI error/winner dialog box

--- a/main.css
+++ b/main.css
@@ -715,3 +715,82 @@ body {
 	background-color: var(--login-button-color-hover);
 }
 /* (...Log In View Style) */
+
+/* Model Error UI */
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+#point_end_options_container{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+}
+.shot_ending_type{
+	padding: 50px;
+	border-radius: 20px;
+
+}
+.shot_ending_type :hover{
+	opacity: 0.5;
+
+}
+
+#forced_error_btn{
+	background-color: lightcoral;
+	color: black;
+
+}
+#unforced_error_btn{
+	background-color: lightcoral;
+	color: black;
+
+}
+#ace_btn{
+	background-color: lightcoral;
+	color: black;
+
+}
+#winner_btn{
+	background-color: lightcoral;
+	color: black;
+
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+	font-weight: bold;
+	text-align: center;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
