--- a/main.css
+++ b/main.css
@@ -540,6 +540,11 @@ body {
 	justify-content: center;
 }
 
+.stats_menu_container{
+	display:flex;
+	flex-direction: column;
+}
+
 .stats_menu_table_container {
 	display:flex;
 	flex-direction: row;
@@ -559,6 +564,11 @@ body {
 	font-size: var(--stats-table-font);
 }
 .stats_menu_col:first-child {
+	margin-right: var(--stats-table-margin);
+	flex:1;
+}
+.stats_menu_col:last-child {
+	flex:2;
 	margin-right: var(--stats-table-margin);
 }
 
@@ -581,8 +591,8 @@ body {
 }
 
 .court_stats_icon {
-	height: 100%;
-	max-width: var(--stats-court-max-width);
+    width: 100%;
+    height: 100%;
 }
 .shot-pin {
 	position: absolute;
