--- a/main.css
+++ b/main.css
@@ -284,6 +284,16 @@ body {
 #menu-menu .menu-dropdown .menu-item:hover {
 	background-color: var(--color-top-bar);
 }
+
+#current-matches-empty {
+	width: var(--top-bar-popup-width);
+	padding: 20px 0;
+	background-color: var(--color-top-bar-dropdown);
+	color: var(--top-bar-font-color);
+	font-size: 14px;
+	text-align: center;
+	display: none;
+}
 /* (...Top Bar Popup & Dropdown Style) */
 /* (...Top Bar Style) */
 
