--- a/main.css
+++ b/main.css
@@ -572,7 +572,7 @@ body {
 
 
 /* Stats Popups Style */
-#menu-popup-stats, #player-view-content, #menu-popup-history {
+#menu-popup-stats, #player-view-content, #menu-popup-history, #menu-popup-player-history {
 	padding: 0 calc((100vw - var(--container-width))/2);
 	position: absolute;
 	top: var(--top-bar-height);
@@ -581,7 +581,7 @@ body {
 	display: none;
 }
 
-#menu-popup-stats > div, #player-view-content > div, #menu-popup-history > div { /* Container for stats and feedback */
+#menu-popup-stats > div, #player-view-content > div, #menu-popup-history > div, #menu-popup-player-history > div { /* Container for stats and feedback */
 	width: var(--container-width);
 	min-height: calc(100vh - var(--top-bar-height));
 	display: flex;
@@ -733,33 +733,33 @@ body {
 /* (...Additional Style for Player View) */
 
 /* Additional Style for History View */
-#menu-popup-history .history-table-header {
+.history-table-header {
 	font-size: var(--stats-table-header-font);
 	margin-bottom: var(--history-header-margin);
 }
 
-#menu-popup-history table.history-table {
+table.history-table {
 	padding: var(--history-table-padding);
 	background-color: var(--stats-feedback-background);
   border: var(--stats-feedback-border);
   border-radius: var(--button-radius-normal);
 }
 
-#menu-popup-history table.history-table td {
+table.history-table td {
 	padding: var(--history-table-padding);
 	font-size: var(--stats-table-font);
 }
 
-#menu-popup-history table.history-table tr:hover > td {
+table.history-table tr:hover > td {
 	color: var(--history-font-highlight);
 	cursor: pointer;
 }
 
-#menu-popup-history table.history-table tr.history-table-empty > td {
+table.history-table tr.history-table-empty > td {
 	color: #666;
 	font-size: 16px;
 }
-#menu-popup-history table.history-table tr.history-table-empty:hover > td {
+table.history-table tr.history-table-empty:hover > td {
 	color: #666;
 	cursor: default;
 }
